# deagle

./: .gitignore  Cargo.toml  README.md  sitemap.xml
.github/workflows/: docs.yml
crates/deagle-cli/: Cargo.toml  README.md
crates/deagle-cli/src/: main.rs
crates/deagle-core/: Cargo.toml  README.md
crates/deagle-core/src/: lib.rs  semantic.rs
crates/deagle-parse/: Cargo.toml  README.md
crates/deagle-parse/src/: c_parser.rs  cpp_parser.rs  go_parser.rs  java_parser.rs  lib.rs  pattern.rs  python_parser.rs  ruby_parser.rs  rust_parser.rs  text_search.rs  typescript_parser.rs
crates/deagle-server/: Cargo.toml  README.md
crates/deagle-server/src/: main.rs  mcp.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/architecture/: graph-model.md  languages.md
docs/src/cli/: map.md  search.md  stats.md
docs/src/extending/: adding-language.md
docs/src/getting-started/: installation.md  quickstart.md
plugin/: CHANGELOG.md  CLAUDE.md  gemini-extension.json  package.json
plugin/.claude-plugin/: plugin.json
plugin/.codex/: INSTALL.md
plugin/.cursor-plugin/: plugin.json
plugin/.opencode/: INSTALL.md
plugin/.opencode/plugins/: deagle.js
plugin/.pawan/: INSTALL.md  plugin.toml
plugin/hooks/: session-start
plugin/skills/using-deagle/: SKILL.md
site/: config.toml
site/content/: _index.md
site/public/: index.html  robots.txt
site/templates/: base.html  index.html
