[workspace]
resolver = "2"
members = ["crates/deagle-core", "crates/deagle-parse", "crates/deagle-cli", "crates/deagle-server"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/dirmacs/deagle"
authors = ["DIRMACS <build@dirmacs.com>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
