[package]
name = "deagle"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for deagle code intelligence — map, search, explain"

[[bin]]
name = "deagle"
path = "src/main.rs"

[features]
default = ["pattern", "text-search"]
pattern = ["deagle-parse/pattern"]
text-search = ["deagle-parse/text-search"]

[dependencies]
deagle-core = { version = "0.1.6", path = "../deagle-core" }
deagle-parse = { version = "0.1.6", path = "../deagle-parse" }
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
rayon = "1.10"
globset = "0.4"
tokei = "14"
serde = { workspace = true }
serde_json = { workspace = true }
