[package]
name = "deagle-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and graph storage for deagle code intelligence"

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]
# Semantic code search via ares-vector (DIRMACS OSS stack)
semantic = ["dep:ares-vector"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rusqlite = { version = "0.34", features = ["bundled"], optional = true }
ares-vector = { version = "0.1", features = ["serde"], optional = true }
fuzzy-matcher = "0.3.7"
sha2 = "0.11.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
