[package]
name = "deagle-parse"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tree-sitter based multi-language code parser for deagle"

[features]
default = []
# Structural pattern matching via ast-grep
pattern = ["dep:ast-grep-core", "dep:ast-grep-language"]
# Fast regex text search via ripgrep library crates
text-search = ["dep:grep-regex", "dep:grep-searcher", "dep:grep-matcher"]

[dependencies]
deagle-core = { version = "0.1.6", path = "../deagle-core" }
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
serde = { workspace = true }
serde_json = { workspace = true }
ast-grep-core = { version = "0.42", optional = true }
ast-grep-language = { version = "0.42", optional = true }
grep-regex = { version = "0.1", optional = true }
grep-searcher = { version = "0.1", optional = true }
grep-matcher = { version = "0.1", optional = true }
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-typescript = "0.23.2"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-ruby = "0.23.1"
